--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         echo "${{ secrets.EC2_KEY }}" > key.pem
         chmod 600 key.pem
+        cat key.pem
 
     - name: Deploy on EC2 via SSH
       run: |
